fix: 修正弹出层z-index值过高的问题

--- a/src/style.less
+++ b/src/style.less
@@ -57,7 +57,7 @@
     bottom: 0;
     position: absolute;
     background-color: white;
-    z-index: 11;
+    z-index: 1;
     display: none;
     transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     &.roam-stack-container-hide {
